fixed last bug for the checkbox stretch goal in the edit form with the negative sign

--- a/src/TransactionForm.css
+++ b/src/TransactionForm.css
@@ -25,7 +25,7 @@
 .cancel {
     /* margin-top: 80px; */
     padding: 30px;
-    border-radius: 25px;
+    border-radius: 55px;
     border: none;
     cursor: pointer;
 }
